--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--Font-awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <!----AOS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <!--Pages css-->
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/services.css">
@@ -24,6 +26,7 @@
     <link rel="stylesheet" href="./css/testimonials.css">
     <link rel="stylesheet" href="./css/appointment.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body id="home">
     <header>
@@ -38,10 +41,10 @@
                 <!---FUN WITH FLAGS-->
                 <div class="flags" id="flags">
                     <div class="flags_item" data-language="es">
-                        <img class="flags_item_img" src="./assets/img/es.svg" alt="flag es">
+                        <img class="flags_item_img" src="./assets/img/es.png" alt="flag es">
                     </div>
                     <div class="flags_item" data-language="en">
-                        <img class="flags_item_img" src="./assets/img/gb.svg"  alt="flag en">
+                        <img class="flags_item_img" src="./assets/img/gb.png"  alt="flag en">
                     </div>
                 </div>
                 <!------>
@@ -51,10 +54,10 @@
                     </div>
                     <div class="nav-block">
                         <ul class="d-flex justify-content-between nav-ul">
-                            <li class="op"><a href="#services" data-section="nav" data-value="services">servicios</a></li>
-                            <li class="op"><a href="#testimonials" data-section="nav" data-value="testimonials">testimonios</a></li>
-                            <li class="op"><a href="#about" data-section="nav" data-value="about">acerca</a></li>
-                            <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
+                            <li class="op"><a href="#services" data-section="nav" data-value="services"></a></li>
+                            <li class="op"><a href="#testimonials" data-section="nav" data-value="testimonials"></a></li>
+                            <li class="op"><a href="#about" data-section="nav" data-value="about"></a></li>
+                            <li class="op"><a href="#contact" data-section="nav" data-value="contact"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -64,11 +67,11 @@
         <!--------Home------>
         <div class="container header-flex mb-3">
             <div class="row">
-                <div class=" col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 d-flex align-items-center">
-                    <div class="header-text">
+                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 d-flex align-items-center">
+                    <div class="header-text" data-aos="fade-down">
                         <h1 data-section="home" data-value="title"></h1>
                         <p data-section="home" data-value="subtitle"></p>
-                        <button class="cta d-flex justify-content-center align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                        <button class="cta d-flex justify-content-center align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <span data-section="home" data-value="btn"></span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
@@ -77,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col d-flex align-items-center">
-                    <div class="header-img">
+                    <div class="header-img" data-aos="fade-down">
                         <img src="/assets/img/header-img.webp" alt="header">
                     </div>
                 </div>
@@ -92,7 +95,7 @@
                 <div class="modal-dialog modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel" data-section="form" data-value="title"></h1>
+                            <h1 class="modal-title" id="exampleModalLabel" data-section="form" data-value="title"></h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -132,7 +135,7 @@
                     <h2 class="services-title" data-section="services" data-value="title"></h2>
                     <div class="srv-flex">
                         <div class="cards-flex d-flex flex-column justify-content-between" data-id="1">
-                            <div class="cards-text d-flex flex-column align-items-center gap-2">
+                            <div class="cards-text d-flex flex-column align-items-center gap-2" data-aos="zoom-out" data-aos-delay="100">
                                 <div>
                                     <img src="/assets/img/section-2-01.webp" alt="Combi Manicure">
                                 </div>
@@ -143,7 +146,7 @@
                             </div>
                         </div>
                         <div class="cards-flex d-flex flex-column justify-content-between" data-id="2">
-                            <div class="cards-text d-flex flex-column align-items-center gap-2">
+                            <div class="cards-text d-flex flex-column align-items-center gap-2" data-aos="zoom-out" data-aos-delay="200">
                                 <div>
                                     <img src="/assets/img/section-2-02.webp" alt="Powegel & Gelpolish">
                                 </div>
@@ -154,7 +157,7 @@
                             </div>
                         </div>
                         <div class="cards-flex d-flex flex-column justify-content-between" data-id="3"> 
-                            <div class="cards-text d-flex flex-column align-items-center gap-2">
+                            <div class="cards-text d-flex flex-column align-items-center gap-2" data-aos="zoom-out" data-aos-delay="300">
                                 <div>
                                     <img src="/assets/img/section-2-03.webp" alt="Nailart">
                                 </div>
@@ -165,7 +168,7 @@
                             </div>
                         </div>
                         <div class="cards-flex d-flex flex-column justify-content-between" data-id="4">
-                            <div class="cards-text d-flex flex-column align-items-center gap-2">
+                            <div class="cards-text d-flex flex-column align-items-center gap-2" data-aos="zoom-out" data-aos-delay="400">
                                 <div>
                                     <img src="/assets/img/section-2-04.webp" alt="Toenails">
                                 </div>
@@ -183,12 +186,12 @@
         <div class="container cont-height-3 d-flex flex-column justify-content-center align-items-center" id="products">
             <div class="row prod-f">
                 <div class="col">
-                    <div class="img-resp">
+                    <div class="img-resp" data-aos="fade-right">
                         <img src="assets/img/products.webp" alt="Products"> 
                     </div>
                 </div>
                 <div class="col">
-                    <div class="padding-prod">
+                    <div class="padding-prod" data-aos="fade-left">
                         <div class="prod-text">
                             <h3 data-section="products" data-value="title"></h3>
                             <p data-section="products" data-value="subtitle"><br>
@@ -240,12 +243,12 @@
         <!-----Quality--->
         <div class="container-fluid">
             <div class="row cont-height-5">
-                <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                <div class="col-lg-5 col-md-12 d-flex justify-content-center align-items-center">
                     <div class="img-resp">
                     <img src="./assets/img/quality-img.webp" alt="Salon">
                     </div>
                 </div>
-                <div class="col-lg-7 d-flex justify-content-center align-items-center">
+                <div class="col-lg-7 col-md-12 d-flex justify-content-center align-items-center">
                     <div class="frame-37">
                         <div class="qt-text">
                             <h3 data-section="quality" data-value="title"></h3>
@@ -397,17 +400,17 @@
                 <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
-                        <li class="light-footer op"><a href="#services" data-section="footer" data-value="services">servicios</a></li>
-                        <li class="light-footer op"><a href="#products" data-section="footer" data-value="products">productos</a></li>
+                        <li class="light-footer op"><a href="#services" data-section="footer" data-value="services"></a></li>
+                        <li class="light-footer op"><a href="./pages/productos.html" data-section="footer" data-value="products"></a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
-                        <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
-                        <li class="light-footer op"><a href="#testimonials" data-section="footer" data-value="testimonials">testimonios</a></li>
-                        <li class="light-footer op"><a href="#about" data-section="footer" data-value="contact">acerca</a></li>
+                        <li class="bold-footer" data-section="footer" data-value="about"></li>
+                        <li class="light-footer op"><a href="#testimonials" data-section="footer" data-value="testimonials"></a></li>
+                        <li class="light-footer op"><a data-section="footer" data-value="contact" data-bs-toggle="modal" data-bs-target="#exampleModal"></a></li>
 
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
-                        <li class="bold-footer" data-section="footer" data-value="contact">contacto</li>
+                        <li class="bold-footer" data-section="footer" data-value="contact"></li>
                         <li class="light-footer">1234 Elmwood Avenue</li>
                         <li class="light-footer">info@beautystudio.com</li>
                         <li class="light-footer">90983-05836</li>
@@ -424,11 +427,6 @@
         </div>
     </footer>
     
-    <!--Button to bottom-
-    <a href="#contact" class="btn-arrow d-flex justify-content-end">
-        <img src="/assets/img/btn-arrow.png" alt="Button to bottom">
-    </a>--->
-
     <!-----Offcanvas-->
     <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
         <div class="offcanvas-body">
@@ -436,15 +434,17 @@
                 <a href="#home">BeautyNails</a>
             </div>
             <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="#services" data-section="nav" data-value="services">servicios</a></li>
-                <li class="op"><a href="#testimonials" data-section="nav" data-value="testimonials">testimonios</a></li>
-                <li class="op"><a href="#about" data-section="nav" data-value="about">acerca</a></li>
-                <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
+                <li class="op"><a href="#services" data-section="nav" data-value="services"></a></li>
+                <li class="op"><a href="#testimonials" data-section="nav" data-value="testimonials"></a></li>
+                <li class="op"><a href="#about" data-section="nav" data-value="about"></a></li>
+                <li class="op"><a href="#" data-section="nav" data-value="contact"></a></li>
             </ul>
         </div>
     </div>
     <!-----Fin Offcanvas-->
     <script src="./js/scripts.js"></script>
+    <!---AOS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
