--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Beauty Nails | Tech-24233</title>
-        <link rel="icon" href="../assets/img/flaticon.png">
-        <!--Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!--Google Fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <!--Font-awesome-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/nav.css">
-        <link rel="stylesheet" href="../css/header.css">
-        <link rel="stylesheet" href="../css/appointment.css">
-        <link rel="stylesheet" href="../css/products.css">
-        <link rel="stylesheet" href="../css/footer.css">
-        <link rel="stylesheet" href="../css/about.css">
-        <link rel="stylesheet" href="../css/pages/productos.css">
-        <link rel="stylesheet" href="../css/pages/about-me.css">
-    </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beauty Nails | Tech-24233</title>
+    <link rel="icon" href="../assets/img/flaticon.png">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--Font-awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!----AOS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <!--Pages css-->
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/appointment.css">
+    <link rel="stylesheet" href="../css/products.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/pages/productos.css">
+    <link rel="stylesheet" href="../css/pages/about-me.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <!-----Nav---->
@@ -37,10 +38,10 @@
             <!---FUN WITH FLAGS-->
             <div class="flags" id="flags">
                 <div class="flags_item" data-language="es">
-                    <img class="flags_item_img" src="../assets/img/es.svg"  alt="flag es">
+                    <img class="flags_item_img" src="../assets/img/es.png"  alt="flag es">
                 </div>
                 <div class="flags_item" data-language="en">
-                    <img class="flags_item_img" src="../assets/img/gb.svg"  alt="flag en">
+                    <img class="flags_item_img" src="../assets/img/gb.png"  alt="flag en">
                 </div>
             </div>
             <!------>
@@ -50,10 +51,10 @@
                 </div>
                 <div class="nav-block">
                     <ul class="d-flex justify-content-between nav-ul">
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="about">acerca</a></li>
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="contact">contacto</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="services"></a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials"></a></li>
+                        <li class="op"><a href="#" data-section="nav" data-value="about"></a></li>
+                        <li class="op"><a href="#foo" data-section="nav" data-value="contact"></a></li>
                     </ul>
                 </div>
             </div>
@@ -64,7 +65,7 @@
         <div class="row">
             <div class="col">
                 <div class="appo-text">
-                    <h2 data-section="about-me-det" data-value="header-title">Acerca de</h2>
+                    <h2 data-section="about-me-det" data-value="header-title"></h2>
                 </div>
             </div>
         </div>
@@ -73,12 +74,16 @@
     <div class="container gal-row">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-6">
-                <h3 class="gal-title" data-section="about-me-det" data-value="first-title">Sobre Nosotros</h3>
-                <p class="gal-p" data-section="about-me-det" data-value="first-paragraph">En Beauty Nails, cada detalle cuenta. Nos especializamos en realzar la belleza de tus manos con técnicas de uñas modernas y productos de calidad. Creemos que el cuidado de las manos es una forma de expresión, y nuestro equipo está dedicado a brindarte una experiencia única y personalizada en un ambiente de confort. Veni a vivir una experiencia que cuida tanto de ti como de tus uñas</p>
+                <div class="over-f" data-aos="fade-up"> 
+                    <h3 class="gal-title" data-section="about-me-det" data-value="first-title"></h3>
+                    <p class="gal-p" data-section="about-me-det" data-value="first-paragraph"></p>
+                </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
-                <h3 class="gal-title" data-section="about-me-det" data-value="second-title">Cómo Comenzó Beauty</h3>
-                <p class="gal-p" data-section="about-me-det" data-value="second-paragraph">Beauty Nails comenzó con una visión clara: crear un espacio donde cada persona pueda expresarse a través del arte de las uñas. Desde nuestros primeros diseños, nos comprometimos a ofrecer un servicio que combine creatividad y profesionalismo. Valoramos cada detalle y creemos en un servicio que vaya más allá de lo estético, transformando cada set en una verdadera obra de arte</p>
+                <div class="over-f" data-aos="fade-up">
+                    <h3 class="gal-title" data-section="about-me-det" data-value="second-title"></h3>
+                    <p class="gal-p" data-section="about-me-det" data-value="second-paragraph"></p>
+                </div>
             </div>
         </div>
     </div>
@@ -86,13 +91,17 @@
     <div class="container">
         <div class="row gal-row">
             <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="img-resp">
-                    <img src="../assets/img/abt.webp">
+                <div class="over-f" data-aos="fade-up">
+                    <div class="img-resp">
+                        <img src="../assets/img/abt.webp">
+                    </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
-                <h3 class="gal-title" data-section="about-me-det" data-value="third-title">El Salón Más Popular, Limpio y Recomendado</h3>
-                <p class="gal-p" data-section="about-me-det" data-value="third-paragraph">Beauty Nails es reconocido por su excelencia en el cuidado de uñas. Nuestro salón ofrece un ambiente limpio y acogedor donde puedes relajarte y disfrutar de servicios de la más alta calidad. Priorizamos la higiene, el confort y las últimas tendencias en el arte de uñas para brindarte una experiencia que supera expectativas. Entra a un espacio donde la belleza y el cuidado se unen para crear el look perfecto.</p>
+                <div class="over-f" data-aos="fade-up">
+                    <h3 class="gal-title" data-section="about-me-det" data-value="third-title"></h3>
+                    <p class="gal-p" data-section="about-me-det" data-value="third-paragraph"></p>
+                </div>
             </div>
         </div>
     </div>
@@ -113,7 +122,7 @@
         </div>
     </div>
     <!-----Footer---->
-    <footer class="container-fluid foo-cont d-flex flex-column justify-content-between align-items-center" id="contact">
+    <footer class="container-fluid foo-cont d-flex flex-column justify-content-between align-items-center" id="foo">
         <div class="row wd-90">
             <div class="col">
                 <div>
@@ -124,15 +133,15 @@
                 <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
-                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services">servicios</a></li>
-                        <li class="light-footer op"><a href="../pages/productos.html" data-section="footer" data-value="products">productos</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services"></a></li>
+                        <li class="light-footer op"><a href="../pages/productos.html" data-section="footer" data-value="products"></a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
-                        <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
-                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials">testimonios</a></li>
+                        <li class="bold-footer" data-section="footer" data-value="about"></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials"></a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
-                        <li class="bold-footer" data-section="footer" data-value="contact">contacto</li>
+                        <li class="bold-footer" data-section="footer" data-value="contact"></li>
                         <li class="light-footer">1234 Elmwood Avenue</li>
                         <li class="light-footer">info@beautystudio.com</li>
                         <li class="light-footer">90983-05836</li>
@@ -143,7 +152,7 @@
         <div class="row wd-90">
             <div class="col">
                 <div class="rg-fo d-flex justify-content-center align-items-center">
-                    <p data-section="footer" data-value="all">2024 Todos los derechos reservados</p>
+                    <p data-section="footer" data-value="all"></p>
                 </div>
             </div>
         </div>
@@ -155,15 +164,17 @@
                 <a href="../index.html">BeautyNails</a>
             </div>
             <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
-                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
-                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about">acerca</a></li>
-                <li class="op"><a href="../index.html" data-section="nav" data-value="contact">contacto</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="services"></a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials"></a></li>
+                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about"></a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="contact"></a></li>
             </ul>
         </div>
     </div>
     <!-----Fin Offcanvas-->
     <script src="../js/scripts.js"></script>
+    <!---AOS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
