--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Beauty Nails | Tech-24233</title>
-        <link rel="icon" href="../assets/img/flaticon.png">
-        <!--Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!--Google Fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <!--Font-awesome-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/nav.css">
-        <link rel="stylesheet" href="../css/appointment.css">
-        <link rel="stylesheet" href="../css/footer.css">
-        <link rel="stylesheet" href="../css/pages/productos.css">
-    </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beauty Nails | Tech-24233</title>
+    <link rel="icon" href="../assets/img/flaticon.png">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--Font-awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!----AOS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <!--Pages css-->
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/appointment.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/pages/productos.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <!-----Nav---->
@@ -33,10 +34,10 @@
             <!---FUN WITH FLAGS-->
             <div class="flags" id="flags">
                 <div class="flags_item" data-language="es">
-                    <img class="flags_item_img" src="../assets/img/es.svg"  alt="flag es">
+                    <img class="flags_item_img" src="../assets/img/es.png" alt="flag es">
                 </div>
                 <div class="flags_item" data-language="en">
-                    <img class="flags_item_img" src="../assets/img/gb.svg"  alt="flag en">
+                    <img class="flags_item_img" src="../assets/img/gb.png" alt="flag en">
                 </div>
             </div>
             <!------>
@@ -46,10 +47,10 @@
                 </div>
                 <div class="nav-block">
                     <ul class="d-flex justify-content-between nav-ul">
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="about">acerca</a></li>
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="contact">contacto</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="services"></a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials"></a></li>
+                        <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about"></a></li>
+                        <li class="op"><a href="#footer" data-section="nav" data-value="contact"></a></li>
                     </ul>
                 </div>
             </div>
@@ -60,7 +61,7 @@
         <div class="row">
             <div class="col">
                 <div class="appo-text">
-                    <h2 data-section="header" data-value="title-gallery">Galeria</h2>
+                    <h2 data-section="header" data-value="title-gallery"></h2>
                 </div>
             </div>
         </div>
@@ -99,7 +100,7 @@
         </div>
     </div>
     <!-----Footer---->
-    <footer class="container-fluid foo-cont d-flex flex-column justify-content-between align-items-center" id="contact">
+    <footer class="container-fluid foo-cont d-flex flex-column justify-content-between align-items-center" id="footer">
         <div class="row wd-90">
             <div class="col">
                 <div>
@@ -110,16 +111,16 @@
                 <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
-                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services">servicios</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services"></a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
-                        <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
-                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials">testimonios</a></li>
-                        <li class="light-footer op"><a href="../pages/about-me.html" data-section="footer" data-value="contact">acerca</a></li>
+                        <li class="bold-footer" data-section="footer" data-value="about"></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials"></a></li>
+                        <li class="light-footer op"><a href="../pages/about-me.html" data-section="footer" data-value="about"></a></li>
 
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
-                        <li class="bold-footer"  data-section="footer" data-value="contact">contacto</li>
+                        <li class="bold-footer"  data-section="footer" data-value="contact"></li>
                         <li class="light-footer">1234 Elmwood Avenue</li>
                         <li class="light-footer">info@beautystudio.com</li>
                         <li class="light-footer">90983-05836</li>
@@ -130,7 +131,7 @@
         <div class="row wd-90">
             <div class="col">
                 <div class="rg-fo d-flex justify-content-center align-items-center">
-                    <p data-section="footer" data-value="all">2024 Todos los derechos reservados</p>
+                    <p data-section="footer" data-value="all"></p>
                 </div>
             </div>
         </div>
@@ -142,16 +143,18 @@
                 <a href="../index.html">BeautyNails</a>
             </div>
             <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
-                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
-                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about">acerca</a></li>
-                <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="services"></a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials"></a></li>
+                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about"></a></li>
+                <li class="op"><a href="#footer" data-section="nav" data-value="contact"></a></li>
             </ul>
         </div>
     </div>
     <!-----Fin Offcanvas-->
     <script src="../js/scripts.js"></script>
     <script src="../js/products.js"></script>
+    <!---AOS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
